@@ -2,7 +2,7 @@
 /build
 /data
 /logs
-/server/test_certs
+/beater/test_certs
 **/*.received.json
 .DS_Store
 *.pyc
