@@ -1,10 +1,11 @@
-package server
+package beater
 
 import (
 	"time"
 )
 
 type Config struct {
+	Host            string        `config:"host"`
 	MaxUnzippedSize int64         `config:"max_unzipped_size"`
 	MaxHeaderBytes  int           `config:"max_header_bytes"`
 	ReadTimeout     time.Duration `config:"read_timeout"`
@@ -19,11 +20,12 @@ type SSLConfig struct {
 	Cert       string `config:"certificate"`
 }
 
-func (c *SSLConfig) IsEnabled() bool {
+func (c *SSLConfig) isEnabled() bool {
 	return c != nil && (c.Enabled == nil || *c.Enabled)
 }
 
 var defaultConfig = Config{
+	Host:            "localhost:8080",
 	MaxUnzippedSize: 10 * 1024 * 1024, // 10mb
 	MaxHeaderBytes:  1048576,          // 1mb
 	ReadTimeout:     2 * time.Second,
